scss/main.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');


$primary-color:  #666060;
$secondary-color: #575353;

body {
    margin:0;
    padding:0;
    font-family: 'Open sans', sans-serif;
    color:#fff;
    background: linear-gradient(
        to right,
        rgba($primary-color, 0.9), 
        rgba($primary-color, 0.6)
        ),

}

.header {
    padding:5px;
    text-align: center;
    font-size: 1em;
}

.guide {
  
    padding:1em;
}



.generator {

    margin:0 auto;
    margin-bottom:3em;
    padding:1em;
    height:70vh;
    width:80%;
    display:flex;
    align-items: center;
    justify-content: center;
    background:linear-gradient(
        to right,
        rgba($primary-color, 0.9), 
        rgba($primary-color, 0.6)
        ),;

    flex-direction: column;
    border-radius: 20px;
    border:2px solid #ccbfbf;
    &_text {
        width:60%;
        padding:10px;
        border:1px solid #332f2f;
        border-radius: 10px;
        text-align: center;
        
        
    }
    &_field {
        width: 25vh;
        height:2em;
        border-radius:20px;
        background-color: #ada6a6;
        border:none;
    }
   


}

.buttons {
    padding:1em;
    margin:1em;
    &_btn {
        border-radius: 8px;
        padding:10px;
        border:none;
        background-color: #332f2f;
        color:#ccbfbf;
    &:hover {
        background-color: #afa4a4;
        color:#050505
    }
    }

}

// Slider parts
.slider {
    -webkit-appearance: none;
    width: 30vh;
    height: 15px;
    border-radius: 5px;  
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
  }
  
  .slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%; 
    background: #050505;
    cursor: pointer;
  }
  
  .slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background-color: #131212;
    cursor: pointer;
  }

  .bottom {
    margin:0 auto;
    width:80%;
    text-align: center;
    display:flex;
    align-items: center;
    justify-content: center;
    border-top:1px solid #fff;
    gap:1em;

    &_link {
        text-decoration: none;
        &_icon:hover {
            color:#050505;
            position:relative;
            top:1px;
        }
    }
    
  }

  

